--- a/Labrador.tex
+++ b/Labrador.tex
@@ -241,7 +241,9 @@ C(skel)=\frac{length(skel_{ol})}{length(skel)},
 
 Where $skel_{ol}=skel(sum_{ver}(skel)>1)$is defined as the overlapped part of $skel$, and $Sum_{ver}(skel)$ is a vector obtained by adding up the values of $skel$ in the vertical direction (see Fig \ref{fig.skel}(c)). Text often has higher concentration ratio $C(skel)$. Thus we can coarsely filter the candidate text skeletons by concentration ratio.
 
-For further precise classification, we train a convolutional neural network including two convolutional layers with $n_1=96$ and $n_2=256$ filters respectively, two pooling layers and one fully-connected layer as illustrated in Fig \ref{fig.cnn}. Finally the network is trained discriminatively by squared hinge loss.
+%For further precise classification, we train a convolutional neural network including two convolutional layers with $n_1=96$ and $n_2=256$ filters respectively, two pooling layers and one fully-connected layer as illustrated in Fig \ref{fig.cnn}. Finally the network is trained discriminatively by squared hinge loss.
+
+For further precise classification, we train the CNN classifier similar to \citet{wang2012end}. As illustrated in Fig \ref{fig.cnn}, given a 32-by-32 input image, every 8-by-8 sub-windows are computed to obtain a 25-by-25-by-96 response map in the first layer. And then the map is average pooled to bring its dimensions to 5-by-5-by-96. Next, another convolution and pooling are stacked on top of the first layer to get a 2-by-2-by-256 response map in the second layer. Finally, these outputs are fully connected to the classification layer. And the network is trained discriminatively by backpropagating the L2-SVM classification error. Our dataset consists of examples from the ICDAR 2011 and 2013 training images, the English subset of the Chars74k dataset, and synthetically generated examples.
 
 \begin{figure}[htbp]
 \centering
@@ -468,6 +470,8 @@ And $f$ is the harmonic mean of precision and recall.
 
 \subsection{Experimental Results}
 
+As seen in table \ref{tab.icdar13}, our proposed method achieves 89.2\% in recall, and 75.5\% in precision under the scheme of ICDAR 13. The state-of-art algorithm proposed by \citet{Cho2016Canny} obtained a harmonic mean of 81.1\% while our method achieves 82.32\%. The recall result of the proposed method is 89.2\%, which outperforms all outcomes of other text detection methods. The increased recall of ours is mainly due to the well designed skeleton proposal strategy and the establishment of candidate text lines¡¯ search space.
+
 \begin{table}[htbp]
 \centering
 \caption{Text Localization Performance on ICDAR 2013(\%).}
@@ -489,7 +493,11 @@ Method & Recall & Precision & F-score \\
 \label{tab.icdar13}
 \end{table}
 
-As seen in table \ref{tab.icdar13}, our proposed method achieves 89.2\% in recall, and 75.5\% in precision under the scheme of ICDAR 13. The state-of-art algorithm proposed by \citet{Cho2016Canny} obtained a harmonic mean of 81.1\% while our method achieves 82.32\%. The recall result of the proposed method is 89.2\%, which outperforms all outcomes of other text detection methods. The increased recall of ours is mainly due to the well designed skeleton proposal strategy and the establishment of candidate text lines¡¯ search space. It is worth mentioning that the proposed detector delivers a fast algorithm for scene text detection which would bear much lower computational cost than CNN-based detector like \citet{tian2015text}. The dataset's average size is around 1,200 by 900 pixels. Our proposed algorithm cost 0.76 seconds to process an image(i.e. skeleton-cut detector, static skeleton response and binary-tree-based rectification). In addition, f-score would drop 2\% when the BTS based text rectification is removed (compare our previous method \citet{He2017Scene} to this proposed method ), which indicates that BTS rectification dose enhance the detection performance both on recall and precision rate.
+It is worth mentioning that the proposed detector delivers a fast algorithm for scene text detection which would bear much lower computational cost than CNN-based detector like \citet{tian2015text}. The dataset's average size is around 1,200 by 900 pixels. Our proposed algorithm cost 0.76 seconds to process an image(i.e. skeleton-cut detector, static skeleton response and binary-tree-based rectification).
+
+In table \ref{tab.icdar13}, \citet{Lu2015Scene} proposed anther traditional approach which using the low-level processing like ours. This approach obtained best precision score, and won the Robust Reading Competition 2013, which proves that  the traditional approaches are still worthy to be communicated and discussed. In addition, f-score would drop 2\% when the BTS based text rectification is removed (compare our previous method \citet{He2017Scene} to this proposed method ), which indicates that BTS rectification dose enhance the detection performance both on recall and precision rate.
+
+Table \ref{tab.icdar11} shows the quantitative comparison of character detection rate on ICDAR 2011 benchmark with \citet{sung2015scene} which propose the state-of-the-art ERs extraction method. The test set of ICDAR2011 includes 255 scene images and 6309 characters. Unlike the refined ERs of \citet{sung2015scene} that need further classification, our skeleton-cut detector proposed in \citet{He2017Scene} have eliminated more than 90\% of false candidates while preserving comparably high recall rate. And the skeleton-cut detector's detection rate is also superior than another state-of-art method proposed by \citet{Cho2016Canny} while detecting less false characters. This demonstrates that the representation skeleton's adaptability is stronger than that of ERs-based representations.
 
 \begin{table}[htbp]
 \centering
@@ -509,8 +517,6 @@ All ERs & 6,051,331 & 0.966 \\
 \end{tabular}
 \label{tab.icdar11}
 \end{table}
-
-Table \ref{tab.icdar11} shows the quantitative comparison of character detection rate on ICDAR 2011 benchmark with \citet{sung2015scene} which propose the state-of-the-art ERs extraction method. The test set of ICDAR2011 includes 255 scene images and 6309 characters. Unlike the refined ERs of \citet{sung2015scene} that need further classification, our skeleton-cut detector proposed in \citet{He2017Scene} have eliminated more than 90\% of false candidates while preserving comparably high recall rate. And the skeleton-cut detector's detection rate is also superior than another state-of-art method proposed by \citet{Cho2016Canny} while detecting less false characters. This demonstrates that the representation skeleton's adaptability is stronger than that of ERs-based representations.
 
 \begin{figure}[htbp]
 \centering
@@ -574,17 +580,20 @@ Method & Recall & Precision & F-score \\
 \label{tab.deep}
 \end{table}
 
-Some detection and skeleton results obtained from ICDAR and MSRA-TD500 datasets are showed in Fig \ref{fig.ruslts}. In the skeleton map results, we can see that most of the background skeletons adjoined to text via adjoin-junctions are eliminated. So that the text candidates could be separated from background to solve the edge-adhesion problem. In the detection results, our proposed detection method could robustly localise a range of texts, even there exists illumination, noise and Indistinguishable textures such as tree leaves, windows, and so on.
+Some detection and skeleton results obtained from ICDAR, SVT and MSRA-TD500 datasets are showed in Fig \ref{fig.ruslts}. In the skeleton map results, we can see that most of the background skeletons adjoined to text via adjoin-junctions are eliminated. So that the text candidates could be separated from background to solve the edge-adhesion problem. In the detection results, our proposed detection method could robustly localise a range of texts, even there exists illumination, noise and Indistinguishable textures such as tree leaves, windows, and so on.
 
 \begin{figure}[htbp]
 \centering
 \includegraphics[width=8cm]{./pic/result4.jpg}
 \centerline{\footnotesize (a)Detection results (top) and skeleton results (bottom) of ICDAR2013.}
 
-\includegraphics[width=8cm]{./pic/result4-2.jpg}
-\centerline{\footnotesize (b)Detection results (top) and skeleton results (bottom) of MSRA-TD500.}
+\includegraphics[width=8cm]{./pic/result4-1.jpg}
+\centerline{\footnotesize (b)Detection results (top) and skeleton results (bottom) of SVT.}
 
-\caption{Sample results (detection and skeleton) on scene text detection datasets:  ICDAR 2013 and MSRA-TD500. Results are marked as red bounding boxes.}
+\includegraphics[width=8cm]{./pic/result4-2.jpg}
+\centerline{\footnotesize (c)Detection results (top) and skeleton results (bottom) of MSRA-TD500.}
+
+\caption{Sample results (detection and skeleton) on scene text detection datasets:  ICDAR 2013, SVT and MSRA-TD500. Text location results are marked as red bounding boxes.}
 
 \label{fig.ruslts}
 \end{figure}
