--- a/refs.bib
+++ b/refs.bib
@@ -337,24 +337,28 @@
   year={2002},
 }
 
-@article{Zhang2015Symmetry,
+@inproceedings{Zhang2015Symmetry,
   title={Symmetry-based text line detection in natural scenes},
   author={Zhang, Zheng and Shen, Wei and Yao, Cong and Bai, Xiang},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
   pages={2558-2567},
   year={2015},
 }
 
-@article{Zhang2016Multi,
+@inproceedings{Zhang2016Multi,
   title={Multi-oriented Text Detection with Fully Convolutional Networks},
   author={Zhang, Zheng and Zhang, Chengquan and Shen, Wei and Yao, Cong and Liu, Wenyu and Bai, Xiang},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
   pages={4159-4167},
   year={2016},
 }
 
-@article{Liao2016TextBoxes,
-  title={TextBoxes: A Fast Text Detector with a Single Deep Neural Network},
+@inproceedings{Liao2017TextBoxes,
+  title={TextBoxes: a Fast Text Detector with a Single Deep Neural Network},
   author={Liao, Minghui and Shi, Baoguang and Bai, Xiang and Wang, Xinggang and Liu, Wenyu},
-  year={2016},
+  booktitle={AAAI Conference on Artificial Intelligence},
+  pages={4161-4167}
+  year={2017},
 }
 
 @inproceedings{Liu2016SSD,
